--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <version>1.2.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>3.1.3</version>
+            <scope>test</scope>
+        </dependency>
         <!-- END test dependencies -->
     </dependencies>
 
